--- a/static/css/main.css
+++ b/static/css/main.css
@@ -684,16 +684,10 @@
   background-color: #FFF;
 }
 
-.casestudy_section.csfinal_design {
-  width: 100%;
-  height: auto;
-  background-color: #DAE5F1;
-}
-
 .casestudy_section.csreflection {
   width: 100%;
   height: auto;
-  background-color: #FFF;
+  background-color: #DAE5F1;
 }
 
 .cs_header {
@@ -783,8 +777,74 @@ span.highlightBlue {
   margin-bottom: 1.5rem;
 }
 
-#personas_flex .personas_content:hover {
+#personas_flex .personas_content:hover, #personas_flex .personas_content:focus {
   transform: scale(115%);
+}
+
+.figma_cs_imgs {
+  width: 75%;
+  height: auto;
+}
+
+.figma_cs_imgs2 {
+  width: 100%;
+  height: auto;
+}
+
+#bucsa_lofi {
+  margin: 2rem 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1rem;
+}
+
+#bucsa_lofi img {
+  width: 100%;
+  height: auto;
+}
+
+#bucsa_landing {
+  width: 100%;
+}
+
+.griditem {
+  margin: 2rem 0;
+  display: grid;
+  column-gap: 1rem;
+}
+
+.griditem.twocol {
+  grid-template-columns: 1fr 1fr;
+}
+
+.griditem.threecol {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.griditem.fivecol {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+@media screen and (max-width: 767px) {
+  .overview_grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* your css rules for ipad pro portrait */
+@media all and (max-width: 834px) and (max-height: 1194px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+  .overview_grid {
+    grid-template-columns: 1fr 1fr;
+  }
+  .cs_content {
+    flex-direction: column;
+  }
+  .cs_content_title {
+    flex: auto;
+  }
+  .cs_content_text {
+    flex: auto;
+  }
 }
 
 * {
