--- a/static/css/_casestudy.scss
+++ b/static/css/_casestudy.scss
@@ -87,6 +87,10 @@
 
 .cs_content_text {
     margin-top: 0.5rem;
+    img {
+        width: 100%;
+        height: auto;
+    }
 }
 
 .cs_overview_img {
