--- a/static/css/_casestudy.scss
+++ b/static/css/_casestudy.scss
@@ -197,6 +197,10 @@ span.highlightBlue {
     .overview_grid {
         grid-template-columns: 1fr;
     }
+    .youtube_vid {
+        width: 300;
+        height: 189;
+    }
 }
 
 /* your css rules for ipad pro portrait */
