--- a/static/css/_casestudy.scss
+++ b/static/css/_casestudy.scss
@@ -49,7 +49,6 @@
     }
 }
 
-
 .cs_header {
     margin-bottom: 4rem;
 }
@@ -60,7 +59,6 @@
 }
 
 .h4sub {
-    // color: $ltblack;
     margin-bottom: 0.5rem;
 }
 
@@ -179,7 +177,7 @@ span.highlightBlue {
 
 // tablet and mobile
 @media screen and (max-width: 767px) {
-    main.casestudy {
+    .casestudy_section {
         h1 {
             font-size: $h2;
         }
