--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -28,6 +28,7 @@ $ltblack: #3D3D3D;
 $blue: #3D75B7;
 $gray: #93A3B7;
 $silverblue: #DAE5F1;
+$ltsilverblue: #EDF6FF;
 
 $highlightGreen: #0ACF83;
 $highlightBlue: #1ABCFE;
