--- a/static/css/main.css
+++ b/static/css/main.css
@@ -681,7 +681,14 @@
 }
 
 .h4sub {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.quotecard {
+  margin-top: 2rem;
+  padding: 1.5rem;
+  background-color: #DAE5F1;
+  border-radius: 1rem;
 }
 
 .cs_content {
@@ -805,6 +812,10 @@ span.highlightBlue {
 
 .griditem.threecol {
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+.griditem.fourcol {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .griditem.fivecol {
