--- a/static/css/_casestudy.scss
+++ b/static/css/_casestudy.scss
@@ -29,9 +29,6 @@
     &.whiteback {
         background-color: $white;
     }
-    &.silverblueback {
-        background-color: $ltsilverblue;
-    }
 }
 
 .cs_header {
@@ -45,6 +42,15 @@
 
 .h4sub {
     margin-bottom: 1rem;
+}
+
+hr {
+    width: 50%;
+    height: 2px;
+    background-color: $silverblue;
+    border-width: 0;
+    border-radius: 1px;
+    margin: auto;
 }
 
 .quotecard {
@@ -96,6 +102,9 @@
 span.highlightBlue {
     background-color: $highlightBlue;
 }
+span.highlightRed {
+    background-color: $highlightRed;
+}
 
 #original_wordpress_grid {
     margin-top: 4rem;
@@ -117,7 +126,7 @@ span.highlightBlue {
         text-align: center;
         transition: all 300ms ease-in-out;
         img {
-            width: 100%;
+            width: 80%;
             height: auto;
             margin-bottom: 1.5rem;
         }
@@ -190,6 +199,9 @@ span.highlightBlue {
         }
         .overview_grid {
             grid-template-columns: 1fr;
+        }
+        .grid_content {
+            margin-bottom: 1rem;
         }
         .youtube_vid {
             width: 300;
