--- a/static/css/_casestudy.scss
+++ b/static/css/_casestudy.scss
@@ -146,6 +146,11 @@ span.highlightRed {
     height: auto;
 }
 
+img.figma_cs_imgs2 {
+    width: 100%;
+    height: auto;
+}
+
 #bucsa_lofi {
     margin: 2rem 0;
     display: grid;
