--- a/static/css/main.css
+++ b/static/css/main.css
@@ -880,6 +880,27 @@ img.figma_cs_imgs2 {
   }
 }
 
+.wip_container {
+  width: 100%;
+  height: 90vh;
+  max-height: 90vh;
+  padding: 0 5rem 5rem;
+  display: flex;
+  justify-content: center;
+  background-color: #FFF;
+  color: #2A2A2A;
+  flex-direction: column;
+}
+
+.wip_h4 {
+  color: #3D3D3D;
+  margin-top: 2rem;
+}
+
+.wip_h4 span {
+  color: #FFF;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
